# archimedes-fork

./: --full-page  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AGORA-SUBMISSION-PACKET.md  ARC-OSS-FORM-DRAFT.md  ARC-OSS-SHOWCASE.md  ARC.md  AUDIT_2026-06-10.md  AUDIT_2026-06-13.md  AUDIT_2026-06-14.md  CLAUDE.md  Makefile  OPERATIONS.md  README.md  SETUP.md  dev.sh  docker-compose.production.yml  docker-compose.yml  environment.yml  progress.md  pytest.ini  ruff.toml  setup-env.sh  test-secrets.mjs
analytics-engine/: README.md  pyproject.toml
analytics-engine/artifacts/: 20260518T062814Z.json  20260518T062844Z.json  20260518T223657Z.json  20260518T223709Z.json  20260518T223743Z.json  20260518T223759Z.json  20260518T223800Z.json
analytics-engine/scripts/: compute_library_pbo.py  gen_daily_returns_store.py  regen_buy_hold_fixture.py  regen_fixtures.py  retest_candidates.py
analytics-engine/strategies/: antonacci_2014_dual_momentum.py  arnott_2019_defensive_quality.py  asness_moskowitz_2013_value.py  backtest_fixtures.json  blitz_hanauer_2010_rmom.py  capital_preservation_tbill.py  faber_2007_sma200_timing.py  frazzini_pedersen_2014_bab.py  gatev_2006_pairs_ewa_ewc.py  gatev_2006_pairs_gld_slv.py  gatev_2006_pairs_ko_pep.py  gatev_2006_portfolio_of_pairs.py  george_hwang_2004_52w_high.py  jegadeesh_titman_1993_cross_sectional_momentum.py  low_tan_wermers_2004_dividend_yield.py  maillard_2010_risk_parity.py  moreira_muir_2017_volatility_managed.py  (+4 more)
backtest/: .gitignore  README.md  pyproject.toml
(+753 files in other folders)
